# mojidraw

./: .gitignore  README.md  TODO.md  analysis_options.yaml  pubspec.yaml
android/app/: build.gradle
app/: .gitignore  README.md  pubspec.yaml
app/lib/: main.dart
design/: README.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: bottom_sheet.dart  char_grid.dart  covering_sheet.dart  emoji_grid.dart  emoji_picker.dart  fitting_text_renderer.dart  grid_cell.dart  grid_drawing_state.dart  grid_layout.dart  main.dart  palette.dart  text_renderer.dart
lib/platform/: gallery_service.dart
lib/state/: drawing_state.dart
lib/temp_flutter_master/: interactive_viewer.dart
lib/theme/: theme_colors.dart
lib/util/: char_grid.dart  fitting_text_renderer.dart  grid_cell.dart  grid_layout.dart  grid_section.dart  grid_size.dart  paint_grid_cell.dart  pan_disambiguator.dart  rect.dart  render_grid_image.dart
lib/widget/: about_page.dart  controls.dart  copy_button.dart  covering_sheet.dart  double_back_to_quit.dart  drawing_page.dart  emoji_grid.dart  emoji_picker.dart  grid_canvas.dart  grid_display.dart  menu.dart  (+5 more)
logo/: README.md
screenshots/: .gitignore  Cargo.toml  README.md
screenshots/assets/: screenshots.yml
screenshots/src/: args.rs  color.rs  generate.rs  input.rs  layout.rs  main.rs  path.rs  text.rs
test/: char_grid_test.dart  fitting_text_renderer_test.dart  grid_layout_test.dart  grid_size_test.dart  palette_test.dart  text_renderer_test.dart  widget_test.dart
web/: index.html  manifest.json
website/: .eslintrc.json  Dockerfile  README.md  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.json  webpack.config.js
(+67 files in other folders)
