[package]
name = "mojidraw-screenshots"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
ab_glyph = "0.2.11"
anyhow = "1.0.41"
clap = { version = "4.1.13", features = ["derive"] }
css-color-parser2 = "1.0.1"
funcmap = "0.1.3"
glyph_brush_layout = "0.2.2"
image = "0.24.5"
log = "0.4.14"
num-traits = "0.2.14"
pretty_env_logger = "0.4.0"
rayon = "1.5.1"
relative-path = { version = "1.4.0", features = ["serde"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_with = "2.3.1"
serde_yaml = "0.9.19"
