[package]
name = "mojidraw-screenshots"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
ab_glyph = "0.2.22"
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
css-color-parser2 = "1.0.1"
funcmap = "0.1.3"
glyph_brush_layout = "0.2.3"
image = "0.24.7"
log = "0.4.20"
num-traits = "0.2.1"
pretty_env_logger = "0.5.0"
rayon = "1.8.0"
relative-path = { version = "1.9.0", features = ["serde"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_with = "3.4.0"
serde_yaml = "0.9.27"
